# tree-sitter-parsers

./: .gitpod.yml  Cargo.toml  README.md  ast_parser.py  b  build.rs  install.sh  pypi  setup.py  test_infer_c.py  test_infer_rust.py
src/: lib.rs  main.rs
tests/: parser_test.rs
tree-sitter-asm-0.0.1/: Cargo.toml  grammar.js  package-lock.json  package.json  tokens.sh  tokens.xsl  types.sh  types.txt
tree-sitter-asm-0.0.1/bindings/node/: binding.cc  index.js
tree-sitter-asm-0.0.1/bindings/rust/: lib.rs
tree-sitter-asm-0.0.1/examples/: 1.asm  2.asm  3.asm
tree-sitter-asm-0.0.1/queries/: highlights.scm
tree-sitter-asm-0.0.1/src/: grammar.json  node-types.json  parser.c
tree-sitter-c-sharp-0.19.1/: .gitattributes  README.md  grammar.js  parser.exp  parser.lib
tree-sitter-c-sharp-0.19.1/.github/workflows/: build.yml
tree-sitter-c-sharp-0.19.1/src/: grammar.json
tree-sitter-java-0.19.1/: test.java
tree-sitter-ruby-0.19.0/: test.rb
tree-sitter-rust-0.19.1/: test.rs
tree-sitter-rust-0.19.1/tmp/: test2.rs
tree-sitter-scala-0.19.0/: test.scala
tree-sitter-solidity-1.0.12/: test.sol
tree-sitter-solidity-1.0.12/bindings/node/: index.js
tree_sitter_parsers/: __init__.py  ast_parser.py
