[package]
name = "tree-sitter-parsers"
version = "0.0.4"
authors = ["Yijun Yu <yijun.yu@huawei.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/yijunyu/tree-sitter-parsers"
homepage = "https://github.com/yijunyu/tree-sitter-parsers"
documentation = "https://docs.rs/tree-sitter-parsers"
keywords = ["parser", "tree-sitter"]
categories = ["development-tools::procedural-macro-helpers", "encoding"]
readme = "README.md"
description = "Preinstallation of tree-sitter parsers of multiple languages for Rust projects"

[dependencies]
tree-sitter = "0.20.0"

[build-dependencies]
cc = "1.0"
