[package]
name = "tree-sitter-asm"
description = "asm grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "asm"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/yijunyu/tree-sitter-parsers"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/asm/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
